--- a/src/app/modules/home-module/pages/home/home.component.html
+++ b/src/app/modules/home-module/pages/home/home.component.html
@@ -1,6 +1,10 @@
 <!-- home.component.html -->
 <app-header></app-header>
 <div class="content">
-  <!-- Aquí va el contenido principal de la página -->
+
+  <app-user-form></app-user-form>
+
+  <app-user-list></app-user-list>
+
 </div>
 <app-footer></app-footer>
