--- a/src/app/modules/home-module/pages/home/user-form/user-form.component.html
+++ b/src/app/modules/home-module/pages/home/user-form/user-form.component.html
@@ -1,1 +1,22 @@
-<p>user-form works!</p>
+<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+  <mat-form-field appearance="fill">
+    <mat-label>Nombre</mat-label>
+    <input matInput formControlName="name" required>
+    <mat-error *ngIf="userForm.controls['name'].invalid">Nombre es requerido</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Apellido</mat-label>
+    <input matInput formControlName="lastname" required>
+    <mat-error *ngIf="userForm.controls['lastname'].invalid">Apellido es requerido</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input matInput formControlName="email" required>
+    <mat-error *ngIf="userForm.controls['email'].invalid">Email es requerido</mat-error>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" type="submit" [disabled]="userForm.invalid">Guardar</button>
+</form>
